Create shared module and downgrade language for client